# tractian_api

./: LICENSE  README.md  config.yaml  generate.sh  main.py  pyproject.toml
tractian_api/tractian_public_api_client/: __init__.py  client.py
tractian_public_api_client/models/: __init__.py  activity_alternative_value_motor.py  add_purchase_requisition_supply_request.py  add_transfer_request_supply_request.py  api_category_motor_response.py  api_consumption_samples_with_tariff_station_response.py  api_consumption_samples_without_tariff_station_response.py  api_cost_samples_with_tariff_station_response.py  api_cost_samples_without_tariff_station_response.py  api_demand_samples_without_tariff_station_response.py  api_disabled_location.py  api_global_units_samples_response.py  api_list_insights_response.py  api_list_inspections_fields.py  api_list_inspections_level.py  api_list_inspections_option.py  api_list_inspections_procedure.py  api_list_inspections_response.py  api_locations.py  api_locations_put_request.py  api_locations_request.py  api_locations_request_deleted.py  api_metric_value.py  api_metric_value_motor.py  api_metric_value_request.py  api_metrics_motor_request.py  api_reliability_event_insight_response.py  api_reliability_event_response.py  api_rpm_samples_response.py  api_supply_attachment.py  api_supply_deleted.py  api_supply_image_conversion.py  api_supply_inventory_adjustment_request.py  api_supply_inventory_adjustment_response.py  api_supply_inventory_patch_request.py  api_supply_item_category_request.py  api_supply_item_reservation_request.py  (+190 more)
(+265 files in other folders)
